--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
+  permission_handler: ^10.2.0
+  pedometer: ^3.0.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
