--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.5
   hexcolor: ^2.0.7
   curved_navigation_bar: ^1.0.3
+  wave: ^0.2.2
 
 dev_dependencies:
   flutter_test:
