--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hexcolor: ^2.0.7
   wave: ^0.2.2
   google_nav_bar: ^5.0.6
+  image_picker: ^0.8.7+4
 
 dev_dependencies:
   flutter_test:
