--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
   permission_handler: ^10.2.0
-  # pedometer: ^3.0.0
+  pedometer: ^3.0.0
   http: ^0.13.5
   hexcolor: ^2.0.7
   wave: ^0.2.2
