--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   get_it: ^7.3.0
+  flutter_local_notifications: ^14.0.0+1
 
 dev_dependencies:
   flutter_test:
