--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
    <application
-        android:label="health_tracking_app"
+        android:label="Healtrix"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
